# TurtleBot_gestControl

./: .gitignore  README.md  new file  new_pkgxml  read and save readme.md  readandsave_temp.cpp  steps  test  test.cpp
devel/: .catkin  .rosinstall  setup.sh
devel/include/fullpkg/: mesg.h
devel/include/softkinetic_camera/: SoftkineticConfig.h
devel/lib/fullpkg/: cloud_viewer  cv  rns  tc
devel/lib/pkgconfig/: fullpkg.pc  softkinetic_camera.pc
devel/lib/python2.7/dist-packages/fullpkg/msg/: __init__.py  _mesg.py
devel/lib/python2.7/dist-packages/softkinetic_camera/cfg/: SoftkineticConfig.py
devel/lib/softkinetic_camera/: softkinetic_bringup_node
devel/share/common-lisp/ros/fullpkg/msg/: _package.lisp  _package_mesg.lisp  fullpkg-msg.asd  mesg.lisp
devel/share/fullpkg/cmake/: fullpkg-msg-paths.cmake  fullpkgConfig.cmake
devel/share/gennodejs/ros/fullpkg/msg/: _index.js  mesg.js
devel/share/roseus/ros/fullpkg/: manifest.l
devel/share/roseus/ros/fullpkg/msg/: mesg.l
devel/share/softkinetic_camera/cmake/: softkinetic_cameraConfig.cmake
devel/share/softkinetic_camera/docs/: SoftkineticConfig.wikidoc
src/fullpkg/: CMakeLists.txt  package.xml
src/fullpkg/launch/: campf.launch  cv.launch  readnsave.launch
src/fullpkg/src/: cloud_viewer.cpp  cv.cpp  lstmnode.py  pfh_shape_reco.cpp  pfh_shape_reco.h  pfh_shape_reco.hpp  pnts.py  rns.cpp  rnsorig.cpp  signature.asc  tc.cpp  tc_todo.cpp  tcorig.cpp  test.cpp  turtlebot_teleop_new.py
src/softkinetic_camera/launch/: softkinetic_camera_demo.launch  softkinetic_cameraj.launch
